exported_metadata/main/default/objects/Service_Request__c/Service_Request__c.object-meta.xml
<CustomObject>
    <description>Tracks support or service issues raised by customers.</description>
    <label>Service Request</label>
    <nameField>
        <displayFormat>SR-{0000}</displayFormat>
        <label>Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>