exported_metadata/main/default/objects/Service_Request__c/fields/Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>Issue_Type__c</fullName>
    <description>Type of issue reported by the customer.</description>
    <label>Issue Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bug</fullName>
                <default>true</default>
                <label>Bug</label>
            </value>
            <value>
                <fullName>Feature</fullName>
            </value>
            <value>
                <fullName>Inquiry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>